k8/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springcicddemo
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: springcicddemo
  template:
    metadata:
      labels:
        app: springcicddemo
    spec:
      containers:
      - image: gcr.io/tech-rnd-project/springcicddemo:1.0.0
        name: springcicddemo
        ports:
        - containerPort: 80
