k8/reactapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reactapp-v1
  labels:
    app: reactapp
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reactapp
      version: v1
  template:
    metadata:
      labels:
        app: reactapp
        version: v1
    spec:
      serviceAccountName: reactapp-v1
      containers:
      - name: reactapp
        image: gcr.io/tech-rnd-project/reactapp-v1:1.0.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        securityContext:
          runAsUser: 1000
---
