k8/springcicddemo1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springcicddemo-v1
  labels:
    app: springcicddemo
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springcicddemo
      version: v1
  template:
    metadata:
      labels:
        app: springcicddemo
        version: v1
    spec:
      serviceAccountName: springcicddemo-v1
      containers:
      - name: springcicddemo
        image: gcr.io/tech-rnd-project/springcicddemo-v1:1.0.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9090
        securityContext:
          runAsUser: 1000
---
