k8/reactapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reactapp
  labels:
    app: reactapp
    service: reactapp
spec:
  ports:
  - port: 80
    targetPort: 8080
    name: http
    protocol: TCP
  selector:
    app: reactapp
