k8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springcicddemo
spec:
  ports:
  - port: 80
    targetPort: 9090
  selector:
    app: springcicddemo
  type: LoadBalancer
