k8/reactapp-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reactapp
  namespace: default
spec:
  hosts:
  - "frontend.ns.com"
  gateways:
  - frontend-gateway
  http:
  - match:
    - {} 
    route:
    - destination:
        host: reactapp.default.svc.cluster.local
        port:
          number: 80
        subset: v1  
      weight: 100
