k8/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: springcicddemo
spec:
  hosts:
  - "*"
  gateways:
  - niveus-gateway
  http:
  - route:
    - destination:
        host: springcicddemo
        port:
          number: 9090
        subset: v1  
      weight: 50
    - destination:
        host: springcicddemo
        port:
          number: 9090
        subset: v2  
      weight: 50
